# paido_core

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  database.db  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 1c9ba3d66d82_create_schools_table.py  4de2e3f3f33c_create_users_table.py  92f3d7937052_migration_init.py
src/paido_core/: app.py  database.py  models.py  schemas.py  security.py
src/paido_core/core/: security.py  settings.py
src/paido_core/db/: session.py
src/paido_core/models/: __init__.py  base.py  course.py  school.py  user.py
src/paido_core/routers/: auth.py  auth_router.py  course_router.py  schools.py  schools_router.py  users.py  users_router.py
src/paido_core/schemas/: course.py  school.py  user.py
src/paido_core/services/: course_service.py  school_service.py  user_service.py
tests/: conftest.py  test_app.py  test_auth.py  test_course.py  test_models.py  test_schools.py  test_security.py  test_users.py
